[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["JasGujral <jasmeet.gujral@mostacktechnology.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.37"
plotly = "^5.20.0"
jupyter = "^1.0.0"
notebook = "^7.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
